// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> topic card  User HAS completed Should render component correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "marginBottom": 8,
            "marginLeft": 8,
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 18,
              "lineHeight": 20,
              "marginRight": 16,
              "marginTop": 8,
            },
          ]
        }
      >
        Test Title
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
            },
          ]
        }
      >
        This is a test description
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#000"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="clock-icon"
          vbHeight={512}
          vbWidth={512}
          width={16}
        >
          <RNSVGGroup
            fill={4278190080}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
              fill={4278190080}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "color": "#67B6A8",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          25
           mins
        </Text>
      </View>
    </View>
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={20}
      bbWidth={20}
      fill="#67B6A8"
      focusable={false}
      height={20}
      meetOrSlice={0}
      minX={0}
      minY={0}
      secondaryFill={null}
      secondaryOpacity={0.4}
      size={20}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "marginRight": 16,
          },
          Object {
            "flex": 0,
            "height": 20,
            "width": 20,
          },
        ]
      }
      testID="checked-icon"
      vbHeight={512}
      vbWidth={512}
      width={20}
    >
      <RNSVGGroup
        fill={4284987048}
        propList={
          Array [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill={4284987048}
          fillOpacity={1}
          propList={
            Array [
              "fill",
              "fillOpacity",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`components >> topic card  User has not completed Should render component correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "margin": 16,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "marginBottom": 8,
            "marginLeft": 8,
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 18,
              "lineHeight": 20,
              "marginRight": 16,
              "marginTop": 8,
            },
          ]
        }
      >
        Test Title
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#282828",
              "display": "flex",
              "fontFamily": "SFUIDisplay-Regular",
              "fontSize": 14,
              "lineHeight": 20,
              "marginTop": 8,
            },
          ]
        }
      >
        This is a test description
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#000"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="clock-icon"
          vbHeight={512}
          vbWidth={512}
          width={16}
        >
          <RNSVGGroup
            fill={4278190080}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
              fill={4278190080}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <Text
          style={
            Array [
              Object {
                "color": "#67B6A8",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "marginLeft": 8,
              },
            ]
          }
        >
          25
           mins
        </Text>
      </View>
    </View>
  </View>
</View>
`;
